Fix visible caption field
git-svn-id: http://plugins.svn.wordpress.org/image-upload-for-bbpress/trunk@1430297 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/bbp-image-upload.css
+++ b/css/bbp-image-upload.css
@@ -3,7 +3,7 @@
  * License: GNU General Public License version 2 or later
  * License URI: http://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html
  */
-body.bbpress.forum .mce-panel[aria-label="Insert/edit image"] .mce-form > .mce-container-body > .mce-last,
+body.bbpress .mce-panel[aria-label="Insert/edit image"] .mce-form > .mce-container-body > .mce-last,
 body.buddypress.forum .mce-panel[aria-label="Insert/edit image"] .mce-form > .mce-container-body > .mce-last {
 	display: none;
 }
